@@ -2719,6 +2719,15 @@ static struct parport_pc_pci {
 		int hi; /* -1 if not there, >6 for offset-method (max
                            BAR is 6) */
 	} addr[4];
+
+	/* If set, this is called immediately after pci_enable_device.
+	 * If it returns non-zero, no probing will take place and the
+	 * ports will not be used. */
+	int (*preinit_hook) (struct pci_dev *pdev, int autoirq, int autodma);
+
+	/* If set, this is called after probing for ports.  If 'failed'
+	 * is non-zero we couldn't use any of the ports. */
+	void (*postinit_hook) (struct pci_dev *pdev, int failed);
 } cards[] __devinitdata = {
 	/* siig_1s1p_10x_550 */		{ 1, { { 3, 4 }, } },
 	/* siig_1s1p_10x_650 */		{ 1, { { 3, 4 }, } },
@@ -2895,6 +2904,10 @@ static int __devinit parport_pc_pci_probe (struct pci_dev *dev,
 	if ((err = pci_enable_device (dev)) != 0)
 		return err;
 
+	if (cards[i].preinit_hook &&
+	    cards[i].preinit_hook (dev, PARPORT_IRQ_NONE, PARPORT_DMA_NONE))
+		return -ENODEV;
+
 	for (n = 0; n < cards[i].numports; n++) {
 		int lo = cards[i].addr[n].lo;
 		int hi = cards[i].addr[n].hi;
@@ -2916,6 +2929,9 @@ static int __devinit parport_pc_pci_probe (struct pci_dev *dev,
 					   PARPORT_DMA_NONE, dev))
 			count++;
 	}
+
+	if (cards[i].postinit_hook)
+		cards[i].postinit_hook (dev, count == 0);
 
 	return count == 0 ? -ENODEV : 0;
 }
